<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cps_rmp220_support</name>
  <version>0.0.1</version>
  <description>Segway RMP220 lite package for control, simulation and visualization</description>
  <maintainer email="bjoern.ellensohn@stud.unileoben.ac.at">Björn Ellensohn</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>urdf</depend>
  <depend>xacro</depend>

</package>
